# termai

./: CMakeLists.txt  Info.plist.in  README.md
include/glad/: glad.h
src/: glad.c  main.cpp
src/python/: integration.py
src/shell/: shell.cpp  shell.h
